2008-03-10  Dave Brolley  <brolley@redhat.com>

	PR5189
	* translate.cxx (probe_or_function_needs_deref_fault_handler): New member of
	c_unparser.
	(c_unparser::emit_function): Initialize probe_or_function_needs_deref_fault_handler.
	Check it after the body is visited and generate a deref fault handler if necessary.
	(c_unparser::emit_probe): Likewise.
	(c_unparser::visit_print_format): Correct the compoenent type for an overridden string
	literal.  Generate code to check that pointer arguments to %m can be dereferenced.
	Generate casts for printf arguments as necessary.
	* elaborate.cxx (typeresolution_info::visit_print_format): Desired type for conv_memory
	is pe_long.

2008-03-06  Frank Ch. Eigler  <fche@elastic.org>

	* Makefile.am (AM_CXXFLAGS, AM_CFLAGS): Remove -Werror.
	* Makefile.in, doc/Makefile.in: Regenerated.

2008-03-03  Frank Ch. Eigler  <fche@elastic.org>

	PR5516
	* elaborate.cxx (symbol_fetcher, dead_assignment_remover):
	Support unresolved $target lvalues.  Propagate pretty error
	messages.
	* staptree.cxx (varuse_collecting_visitor target_symbol): Ditto.
	* staptree.h: Corresponding decl.

	* loc2c.c: c_translate_pointer_store: New function.
	* loc2c.h: Corresponding decl.
	* tapsets.cxx (dwflpp::translate_final_fetch_or_store): Call it
	for $target pointer assignments.

2008-02-29  Will Cohen  <wcohen@redhat.com>

	* main.cxx (handle_interrupts): Make compatible with GCC 4.3.

2008-02-28  Frank Ch. Eigler  <fche@elastic.org>

	PR5045
	* session.h (pending_interrupts): New global.
	* main.cxx (handle_interrupts): New fn to handle SIGINT* etc.
	* elaborate.cxx, translate.cxx, tapsets.cxx, main.cxx (*): Insert
	pending_interrupts escape hatches inside potentially timetaking loops.
	* buildrun.cxx: Don't deal with signals.

2008-02-27  Frank Ch. Eigler  <fche@elastic.org>

	PR5697
	* configure.ac (enable-docs): Implement.
	* systemtap.spec.in: Add optional docs build/install/prereqs.
	* Makefile.am (SUBDIRS): Add doc.