@@ -1,3 +1,9 @@
+2008-03-12  Dave Brolley  <brolley@redhat.com>
+
+	PR5897
+	* staptree.cxx (probe::printsig): If this probe was derived from an alias,
+	call the printsig method of the alias.
+
 2008-03-10  Dave Brolley  <brolley@redhat.com>
 
 	PR5189
